<resources>
    <string name="app_name">DaftarFilm</string>
    <string name="judul_film">Judul Film</string>
    <string name="sinopsis_film">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae facilisis odio. Etiam varius et massa eget eleifend. Aenean non ligula suscipit, gravida dui sit amet, feugiat lacus. Sed quis tellus consectetur, ultricies libero vitae, mattis tellus. Aliquam eleifend velit dignissim nunc ultrices, convallis imperdiet metus suscipit. Nullam sodales faucibus aliquet. Donec in quam sed ante pharetra consequat. Praesent porttitor dapibus condimentum. Proin a mi eu leo facilisis iaculis.</string>
    <string name="tahun_rilis">19XX—2XXX</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about_me">About me</string>
    <string name="nama_saya">Reyhan Herdiyanto</string>
    <string name="email_saya">reyhanherdiyanto180603@gmail.com</string>
    <string name="tentang_saya">TENTANG SAYA</string>
    <string name="rilis">Tahun rilis:</string>
    <string name="share_button">Share button</string>

    <string-array name="film_judul">
        <item>Hacksaw Ridge</item>
        <item>The Raid</item>
        <item>The Batman</item>
        <item>FIlosofi Kopi</item>
        <item>The Hunger Games</item>
        <item>Zodiac</item>
        <item>The Maze Runner</item>
        <item>The Walk</item>
        <item>Inception</item>
        <item>The Martian</item>
    </string-array>

    <string-array name="rilis_tahun">
        <item>2016</item>
        <item>2011</item>
        <item>2022</item>
        <item>2015</item>
        <item>2012</item>
        <item>2007</item>
        <item>2014</item>
        <item>2015</item>
        <item>2010</item>
        <item>2015</item>
    </string-array>

    <string-array name="film_sinopsis">
        <item>Hacksaw Ridge adalah film yang mengisahkan kisah nyata Desmond Doss (diperankan oleh Andrew Garfield), seorang penentang bersumpah yang mendaftar ke dalam tentara Amerika selama Perang Dunia II tanpa membawa senjata, dan kemudian menjadi pahlawan medis lapangan di Pertempuran Okinawa, menyelamatkan puluhan nyawa tanpa pernah mengambil nyawa manusia, mempertaruhkan hidupnya untuk melakukan tindakan penyelamatan yang penuh pengorbanan di tengah pertempuran yang brutal, yang akhirnya memenangkannya Medali Kehormatan Amerika Serikat.</item>
        <item>The Raid adalah film aksi Indonesia yang mengisahkan seorang anggota pasukan khusus bernama Rama (diperankan oleh Iko Uwais) yang bersama dengan timnya masuk ke sebuah apartemen yang dikuasai oleh sekelompok kriminal sadis. Mereka harus berjuang melawan berbagai jenis lawan yang sangat mematikan dalam upaya untuk menangkap bos narkoba yang berbahaya. Film ini ditandai dengan aksi bela diri yang sangat intens, pertarungan brutal, dan ketegangan yang meningkat sepanjang cerita, menjadikannya sebagai salah satu film aksi terkenal dari Indonesia yang diakui secara internasional.</item>
        <item>The Batman adalah film superhero yang mengisahkan petualangan baru Bruce Wayne/Batman (diperankan oleh Robert Pattinson) dalam perannya sebagai penjaga Gotham City yang canggih. Di tengah kota yang tenggelam dalam kejahatan dan korupsi, Batman menyelidiki serangkaian pembunuhan misterius yang terhubung dengan sejarah gelap kota, sementara juga menghadapi musuh tangguh seperti Riddler (diperankan oleh Paul Dano) dan Catwoman (diperankan oleh Zoë Kravitz). Film ini menggabungkan elemen noir yang gelap dengan aksi yang mendebarkan, mengungkap lapisan-lapisan kompleks karakter Batman sambil menggali kedalaman kisah Gotham City.</item>
        <item>Filosofi Kopi adalah film Indonesia yang mengisahkan perjalanan seorang penjual kopi bernama Ben (diperankan oleh Chicco Jerikho) dan sahabatnya Jody (diperankan oleh Rio Dewanto) dalam menjalankan kedai kopi kecil mereka, Filosofi Kopi. Kedai ini menjadi tempat bagi berbagai macam karakter dan cerita hidup yang berlalu, sementara Ben mencoba mencari makna lebih dalam dari segelas kopi. Film ini menjelajahi tema-tema seperti persahabatan, cinta, kehidupan, dan makna dalam setiap cangkir kopi, menciptakan kisah yang menggugah hati dengan latar yang sarat pesan filosofis.</item>
        <item>The Hunger Games adalah sebuah film yang diadaptasi dari seri novel dengan nama yang sama oleh Suzanne Collins. Film ini berlatar di masa depan di negara fiksi yang disebut Panem, yang terdiri dari Capitol yang kuasa dan 12 distrik yang tertindas. Dalam hukuman brutal untuk memberontak, Capitol mengadakan Hunger Games tahunan, di mana satu remaja laki-laki dan satu remaja perempuan dari setiap distrik dipaksa untuk bertempur sampai mati di arena yang ditayangkan secara langsung. Cerita berpusat pada Katniss Everdeen (diperankan oleh Jennifer Lawrence) yang menjadi sukarelawan untuk menggantikan adiknya dalam Hunger Games, memulai perjalanan epik yang penuh perjuangan, persahabatan, dan perlawanan terhadap ketidakadilan, sambil menghadapi ancaman mematikan dan intrik politik di Capitol.</item>
        <item>Zodiac adalah sebuah film thriller psikologis yang disutradarai oleh David Fincher, yang mengisahkan kisah sebenarnya dari pembunuh berantai yang dikenal sebagai Zodiac Killer, yang aktif di San Francisco pada tahun 1960-an dan 1970-an. Film ini berpusat pada upaya jurnalis, detektif, dan wartawan untuk mengidentifikasi dan menangkap pembunuh tersebut, serta dampak yang berkepanjangan dari kasus ini pada kehidupan mereka. Dengan berfokus pada karakter yang mendalam dan penyelidikan yang penuh teka-teki, "Zodiac" menciptakan atmosfer yang tegang dan menggugah pemirsa dengan menggali detail-detail mengerikan dari kasus sebenarnya yang belum pernah terpecahkan ini.</item>
        <item>The Maze Runner adalah film adaptasi dari novel berjudul sama karya James Dashner. Film ini mengisahkan kisah seorang pemuda bernama Thomas (diperankan oleh Dylan O Brien) yang tiba-tiba terbangun dalam sebuah komunitas remaja yang terjebak di sebuah labirin raksasa yang mematikan tanpa ingatan tentang masa lalu mereka. Thomas kemudian bergabung dengan para remaja lain yang berusaha mencari jalan keluar dari labirin itu, menghadapi bahaya monster misterius yang menghuni labirin tersebut. Sementara mereka berusaha mencari tahu mengapa mereka berada di sana, mereka juga harus mengatasi konflik internal dan mengungkap rahasia di balik misteri labirin tersebut. Film ini penuh dengan ketegangan, misteri, dan tindakan yang mendebarkan sepanjang perjalanan mencari kebebasan mereka.</item>
        <item>The Walk adalah sebuah film yang disutradarai oleh Robert Zemeckis yang mengisahkan kisah seorang seniman kawat sejalan asal Prancis bernama Philippe Petit (diperankan oleh Joseph Gordon-Levitt). Film ini berdasarkan kisah nyata tentang pengaruh Philippe Petit dalam merencanakan dan menjalankan aksi sejalan yang berani dan berbahaya pada tahun 1974, yaitu berjalan di atas tali kawat yang dijentangkan antara menara Kembar World Trade Center di New York City. Film ini membangun ketegangan yang menggigit seiring dengan persiapan Petit dan timnya untuk menjalankan aksi yang sangat spektakuler dan menghadirkan pemandangan mengesankan dari ketinggian dan petualangan yang luar biasa di atas langit New York.</item>
        <item>Dalam film Inception karya Christopher Nolan, Dom Cobb (diperankan oleh Leonardo DiCaprio), seorang pencuri berbakat dalam masuk ke dalam mimpi orang lain untuk mencuri rahasia dari alam bawah sadar mereka, mendapat tawaran sulit untuk melakukan "inception," yaitu menanamkan ide ke dalam pikiran seseorang melalui mimpi. Dalam perjalanan yang penuh teka-teki dan intrik, Cobb dan timnya memasuki lapisan-lapisan mimpi yang semakin dalam, menciptakan dunia yang berputar-putar di antara realitas dan khayalan, sementara juga menghadapi masa lalu yang kelam dan pengorbanan pribadi. "Inception" menggabungkan elemen ilmu pengetahuan fiksi dan psikologi dalam sebuah perjalanan visual yang luar biasa dan kompleks, yang menantang pemirsa untuk merenungkan tentang realitas dan kesadaran.</item>
        <item>The Martian" adalah sebuah film yang diadaptasi dari novel dengan judul yang sama karya Andy Weir. Film ini disutradarai oleh Ridley Scott dan dibintangi oleh Matt Damon sebagai Mark Watney, seorang astronaut NASA yang tertinggal dan ditinggalkan di Mars oleh timnya karena mereka mengira dia telah tewas dalam badai pasir yang dahsyat. Mark Watney harus berjuang untuk bertahan hidup dalam kondisi yang sangat keras dan terisolasi di planet merah tersebut. Dengan sumber daya terbatas, dia harus mencari cara untuk memproduksi makanan, air, dan menghubungi Bumi untuk meminta bantuan. Film ini mengikuti perjuangan Watney untuk bertahan hidup di Mars sambil juga memperlihatkan upaya besar dari NASA dan rekan-rekan astronotnya untuk menyelamatkannya. "The Martian" adalah kombinasi antara drama bertahan hidup yang mendebarkan dan eksplorasi luar angkasa yang menarik, dengan sentuhan humor khas Mark Watney.</item>
    </string-array>

    <string-array name="poster_film">
        <item>https://upload.wikimedia.org/wikipedia/id/7/7b/Hacksaw_Ridge_Movie_Poster_2016.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/en/9/9a/The_Raid_2011_poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/5/54/The_Batman_%28film%29_poster.jpeg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/2/2c/Poster_film_Filosofi_Kopi_2015.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/en/4/42/HungerGamesPoster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/8/8a/Zodiac32432.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/b/be/The_Maze_Runner_poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/en/5/57/The_Walk_%282015_film%29_poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/id/9/91/Inception_poster.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/en/c/cd/The_Martian_film_poster.jpg</item>
    </string-array>
</resources>