<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/tentang_saya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/tentang_saya"/>

    <ImageView
        android:id="@+id/foto_saya"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/tentang_saya"
        app:layout_constraintEnd_toEndOf="@id/tentang_saya"
        app:layout_constraintTop_toBottomOf="@id/tentang_saya"
        android:layout_marginTop="10dp"
        android:src="@mipmap/foto_saya_foreground"
        />

    <TextView
        android:id="@+id/nama_saya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/foto_saya"
        app:layout_constraintStart_toStartOf="@+id/foto_saya"
        app:layout_constraintEnd_toEndOf="@id/foto_saya"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/nama_saya"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nama_saya"
        app:layout_constraintStart_toStartOf="@id/nama_saya"
        app:layout_constraintEnd_toEndOf="@id/nama_saya"
        android:textSize="15sp"
        android:text="@string/email_saya"/>

</androidx.constraintlayout.widget.ConstraintLayout>