<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/poster_film"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/judul_film"
            card_view:layout_constraintTop_toTopOf="@id/poster_film"
            card_view:layout_constraintStart_toEndOf="@+id/poster_film"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/judul_film"/>

        <TextView
            android:id="@+id/tahun_rilis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@id/judul_film"
            card_view:layout_constraintEnd_toEndOf="@id/judul_film"
            card_view:layout_constraintTop_toBottomOf="@id/judul_film"
            android:textSize="14sp"
            android:text="@string/tahun_rilis" />

        <TextView
            android:id="@+id/sinopsis_film"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis_film"
            android:textSize="14sp"
            android:layout_marginTop="0dp"
            card_view:layout_constraintStart_toStartOf="@id/tahun_rilis"
            card_view:layout_constraintEnd_toEndOf="@id/tahun_rilis"
            card_view:layout_constraintTop_toBottomOf="@id/tahun_rilis"
            card_view:layout_constraintBottom_toBottomOf="@id/poster_film"
            android:maxLines="3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>